Re-fix layout issue with wrapper div instead of css hack.

--- a/css/sectionalize.scss
+++ b/css/sectionalize.scss
@@ -52,11 +52,6 @@ section.transparentSection {
     background-attachment: scroll;
     background-size: 100%;
 }
-
-html, body {
-    width:100%;
-    overflow-x:hidden;
-}
 }
 
 .icon-bar {
